--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
     <title>Polyglot</title>
   </head>
-  <body>
+  <body class="font-sans dark:text-white">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
