--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" /> -->
-    <title>Polyglot</title>
+    <title>Improve your language skills with AI</title>
   </head>
   <body class="font-sans dark:text-white">
     <div id="app"></div>
